# Mupdf-AndroidStudio

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/bestxty/mupdf/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/test/java/com/bestxty/mupdf/: ExampleUnitTest.java
libmupdf/: CMakeLists.txt  build.gradle
libmupdf/src/main/: AndroidManifest.xml
libmupdf/src/main/cpp/: mupdf.c
libmupdf/src/main/cpp/include/mupdf/: fitz.h  pdf.h  xps.h
libmupdf/src/main/cpp/include/mupdf/fitz/: annotation.h  bitmap.h  buffer.h  colorspace.h  compressed-buffer.h  context.h  crypt.h  device.h  display-list.h  document.h  filter.h  font.h  function.h  glyph-cache.h  glyph.h  hash.h  image.h  link.h  math.h  outline.h  output-pcl.h  output-png.h  output-pnm.h  output-pwg.h  output-svg.h  output-tga.h  output.h  path.h  pixmap.h  separation.h  shade.h  store.h  stream.h  string.h  structured-text.h  system.h  text.h  transition.h  tree.h  unzip.h  (+4 more)
libmupdf/src/main/cpp/include/mupdf/pdf/: name-table.h
libmupdf/src/main/cpp/source/fitz/: context.c
libmupdf/src/main/cpp/source/pdf/: pdf-cmap-table.c
libmupdf/src/main/cpp/source/pdf/js/: pdf-js.c
libmupdf/src/main/res/values/: strings.xml
